# Podcast-Automation

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
podcast/: __init__.py  config.py  curate.py  events.py  extras.py  hydrate.py  ingest.py  llm.py  models.py  pipeline.py  publish.py  synth.py  verify.py  write.py
podcast/web/: __init__.py  __main__.py  app.py  audio.py  config_io.py  health.py  runner.py  state.py
podcast/web/static/: app.js  index.html  styles.css
scripts/: test_pipeline_events.py  test_web_live.py
