[build-system]
# Explicit build backend; setuptools floor set to the release that fixes
# PYSEC-2026-3447. See https://osv.dev/vulnerability/PYSEC-2026-3447
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-automation"
version = "2.0.0"
description = "Fully-local news-bulletin generator: RSS -> LM Studio script -> VibeVoice MLX audio."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.8",      # full article text extraction
    "openai>=1.51",          # client only; points at local LM Studio
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "mlx-audio>=0.2",        # VibeVoice on Apple Silicon
    "soundfile>=0.12",
    "numpy>=1.26",
    # Security floor for a transitive dependency: torch arrives via
    # mlx-audio -> mlx-whisper. 2.13.0 is the release that fixes PYSEC-2025-194.
    # See https://osv.dev/vulnerability/PYSEC-2025-194
    "torch>=2.13.0",
]

[project.optional-dependencies]
publish = ["PyDrive2>=1.20"]   # Google Drive upload (optional)

[project.scripts]
podcast = "podcast.pipeline:main"

[tool.setuptools]
packages = ["podcast"]
