[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podcast-automation"
version = "2.0.0"
description = "Fully-local news-bulletin generator: RSS -> LM Studio script -> VibeVoice MLX audio."
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.8",      # full article text extraction
    "openai>=1.51",          # client only; points at local LM Studio
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "mlx-audio>=0.2",        # VibeVoice on Apple Silicon
    "soundfile>=0.12",
    "numpy>=1.26",
    # Security floor for a transitive dependency: torch arrives via
    # mlx-audio -> mlx-whisper. 2.13.0 is the release that fixes PYSEC-2025-194.
    # See https://osv.dev/vulnerability/PYSEC-2025-194
    "torch>=2.13.0",
]

[project.optional-dependencies]
publish = ["PyDrive2>=1.20"]   # Google Drive upload (optional)
web = [                        # local web console
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",  # includes websockets for live progress
]

[project.scripts]
podcast = "podcast.pipeline:main"
podcast-web = "podcast.web.__main__:main"

[dependency-groups]
# Dev tooling (PEP 735). Install with `uv sync` (included by default) or
# skip with `uv sync --no-dev`.
dev = ["ruff>=0.15"]

[tool.hatch.build.targets.wheel]
# Ships the whole `podcast` package, including podcast/web/static/* assets.
packages = ["podcast"]

[tool.ruff]
line-length = 100
target-version = "py314"
